[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/Characters/Enemies/Character.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Util/DamageReceiver.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Util/StateMachine/StateMachine.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 50.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 50.0

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.612068, -0.26487 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 3 )
receiver_path = NodePath("..")

[node name="Shape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="on_hit_start" from="HitBox" to="." method="on_hit"]
